w3s validator + fixed post-it with wrong color

--- a/styles/common/layout.css
+++ b/styles/common/layout.css
@@ -17,6 +17,10 @@ body {
   box-shadow: 0px 3px 6px #00000029;
 }
 
+.post-it p img{
+  vertical-align: middle;
+}
+
 .text-box {
   padding: 1rem;
   box-sizing: border-box;
