--- a/styles/pages/your-visit.css
+++ b/styles/pages/your-visit.css
@@ -35,7 +35,7 @@
 }
 
 #location .post-it {
-  background-color: var(--section-color-8);
+  background-color: var(--section-color-9);
 }
 
 #café {
